<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_margin="1dp"
        android:background="@drawable/metallica"/>


    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
             <TextView
                 android:id="@+id/item_titre"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/item_default_name"
                 android:textSize="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_auteur"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/item_default_auteur"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5sp"
                    android:text="•"/>

                <TextView
                    android:id="@+id/item_Album"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/item_default_album"
                    android:layout_marginLeft="5sp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>