<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recherche">

    <Button
        android:id="@+id/btnRetourRecherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="44dp"
        android:text="@string/txtBtnRetourMenu"
        app:backgroundTint="#8A8A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtRecherche"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/txtEditRecherche"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btnRecherche"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnRecherche"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:text="OK"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:backgroundTint="#A3A1A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtRecherche"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/Titre_Recherche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtMenuRecherche"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="21dp"
        android:text="Quelle musique cherchez vous?"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titre_Recherche" />
</androidx.constraintlayout.widget.ConstraintLayout>